part-1/timestamp-string/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: timestamp-string-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: timestamp-string 
  template:
    metadata:
      labels:
        app: timestamp-string 
    spec:
      volumes:
        - name: shared-time
          emptyDir: {}
      containers:
      - name: timestamp-reader 
        image: jimryan/timestamp-reader:latest
        imagePullPolicy: Always
        volumeMounts:
          - name: shared-time
            mountPath: /usr/src/app/files
      - name: timestamp-writer 
        image: jimryan/timestamp-writer:latest
        imagePullPolicy: Always
        volumeMounts:
          - name: shared-time
            mountPath: /usr/src/app/files
